Update Face Recognition – Unlock Your Computer With Your Face.ipynb

--- a/Face Recognition – Unlock Your Computer With Your Face.ipynb
+++ b/Face Recognition – Unlock Your Computer With Your Face.ipynb
@@ -293,7 +293,7 @@
     "\n",
     "if raj == True:\n",
     "    whatsapp(\"found your face buddy\",1,1)\n",
-    "    email(\"Your face is recognised successfully\", \"rajsinghbhiti786@gmail.com\")\n",
+    "    email(\"Your face is recognised successfully\", \"receiver_email\")\n",
     "    awsResources()"
    ]
   },
